Add basic domain